metadata1/unpackaged/objects/Account_Roles__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Property_ID__r.Address_Line_1__c +&apos;,&apos;+ Property_ID__r.Address_Line_2__c +&apos;,&apos;+  Property_ID__r.City__c +&apos;,&apos;+   Property_ID__r.State__c +&apos;,&apos;+  Property_ID__r.Country__c +&apos;,&apos;+   Property_ID__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Job_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Job ID</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiple_Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property Owner</fullName>
                </value>
                <value>
                    <fullName>Tester</fullName>
                </value>
                <value>
                    <fullName>Tester 2</fullName>
                </value>
                <value>
                    <fullName>Tester 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property ID</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Property Owner</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Tenant Real Estimate / Facilities</fullName>
                </value>
                <value>
                    <fullName>Independent Claims Adjuster</fullName>
                </value>
                <value>
                    <fullName>Carrier Claims Adjuster</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Insurance carrier</fullName>
                </value>
                <value>
                    <fullName>Insurance Broker</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Roles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Roles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>